--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "anthropic>=0.42.0",
     "asyncpg>=0.31.0",
     "chromadb>=1.4.0",
+    "click>=8.1.0",
     "clickhouse-connect>=0.7.0",
     "fastapi>=0.128.0",
     "google-generativeai>=0.8.3",
@@ -23,11 +24,15 @@ dependencies = [
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
     "python-dotenv>=1.2.1",
+    "rich>=13.0.0",
     "sqlalchemy>=2.0.45",
     "sqlparse>=0.5.0",
     "tiktoken>=0.8.0",
     "uvicorn>=0.40.0",
 ]
+
+[project.scripts]
+datachat = "backend.cli:main"
 
 [dependency-groups]
 dev = [
