--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "chromadb>=1.4.0",
     "click>=8.1.0",
     "clickhouse-connect>=0.7.0",
+    "cryptography>=43.0.0",
     "fastapi>=0.128.0",
     "google-generativeai>=0.8.3",
     "httpx>=0.28.1",
