--- a/.env.example
+++ b/.env.example
@@ -43,7 +43,7 @@ DATABASE_MAX_OVERFLOW=10
 DATABASE_POOL_TIMEOUT=30
 DATABASE_ECHO=false
 # Database registry encryption (generate with: python -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())")
-DATABASE_CREDENTIALS_KEY=replace_with_fernet_key
+# DATABASE_CREDENTIALS_KEY=base64_fernet_key_here
 
 # Chroma Vector Store Configuration
 CHROMA_PERSIST_DIR=./chroma_data
