--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "sqlparse>=0.5.0",
     "tiktoken>=0.8.0",
     "uvicorn>=0.40.0",
+    "watchdog>=4.0.0",
 ]
 
 [project.scripts]
