feat: persist approved datapoints and add review UI

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ APP_NAME=DataChat
 DEBUG=false
 API_HOST=0.0.0.0
 API_PORT=8000
+SYNC_WATCHER_ENABLED=true
 
 # LLM Provider Configuration
 # Provider selection: openai, anthropic, google, local
