--- a/.env.example
+++ b/.env.example
@@ -37,8 +37,10 @@ LLM_TEMPERATURE=0.0
 LLM_MAX_TOKENS=2000
 LLM_TIMEOUT=30
 
-# Database Configuration
+# Target Database Configuration (queries)
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/datachat
+# System Database Configuration (registry/profiling/demo)
+SYSTEM_DATABASE_URL=postgresql://postgres:postgres@localhost:5432/datachat
 DATABASE_POOL_SIZE=5
 DATABASE_MAX_OVERFLOW=10
 DATABASE_POOL_TIMEOUT=30
