--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,12 +18,14 @@ dependencies = [
     "fastapi>=0.128.0",
     "google-generativeai>=0.8.3",
     "httpx>=0.28.1",
+    "jinja2>=3.1.4",
     "langchain-openai>=1.1.7",
     "langgraph>=1.0.6",
     "networkx>=3.6.1",
     "openai>=2.15.0",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
+    "pyyaml>=6.0.2",
     "python-dotenv>=1.2.1",
     "rich>=13.0.0",
     "sqlalchemy>=2.0.45",
