--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,1 @@
-__pycache__/
-*.py[cod]
-.env
-.venv/
-venv/
-*.egg-info/
-dist/
-build/
-.pytest_cache/
-.coverage
-htmlcov/
-chroma_data/
-node_modules/
-.next/
-datapoints/managed/
-CLAUDE.md
-playbook.md
+.DS_Store
