--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
 .DS_Store
 .env
+.env.local
+.env.*.local
+.coverage
+.pytest_cache/
+__pycache__/
+*.py[cod]
+*.egg-info/
+dist/
+build/
+node_modules/
+chroma_data/
+datapoints/managed/
+*.log
