--- a/.env.example
+++ b/.env.example
@@ -39,6 +39,7 @@ LLM_TIMEOUT=30
 
 # Target Database Configuration (queries)
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/datachat
+DATABASE_TYPE=postgresql
 # System Database Configuration (registry/profiling/demo)
 SYSTEM_DATABASE_URL=postgresql://postgres:postgres@localhost:5432/datachat
 DATABASE_POOL_SIZE=5
