Improve clarification flow and CLI output

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ DEBUG=false
 API_HOST=0.0.0.0
 API_PORT=8000
 SYNC_WATCHER_ENABLED=true
+# Env precedence: default uses .env values over shell env.
+# Set DATA_CHAT_ENV_SOURCE=system to force system env priority.
 
 # LLM Provider Configuration
 # Provider selection: openai, anthropic, google, local
