--- a/.env.example
+++ b/.env.example
@@ -64,3 +64,17 @@ LOG_LEVEL=INFO
 LOG_FORMAT=%(asctime)s - %(name)s - %(levelname)s - %(message)s
 LOG_DATE_FORMAT=%Y-%m-%d %H:%M:%S
 # LOG_FILE=logs/datachat.log  # Uncomment to enable file logging
+
+# Pipeline Performance Controls (optional)
+# PIPELINE_SQL_TWO_STAGE_ENABLED=true
+# PIPELINE_SQL_TWO_STAGE_CONFIDENCE_THRESHOLD=0.78
+# PIPELINE_SQL_PROMPT_BUDGET_ENABLED=false
+# PIPELINE_SQL_PROMPT_MAX_TABLES=80
+# PIPELINE_SQL_PROMPT_FOCUS_TABLES=8
+# PIPELINE_SQL_PROMPT_MAX_COLUMNS_PER_TABLE=18
+# PIPELINE_SQL_PROMPT_MAX_CONTEXT_CHARS=12000
+# PIPELINE_SYNTHESIZE_SIMPLE_SQL_ANSWERS=true
+# PIPELINE_CLASSIFIER_DEEP_LOW_CONFIDENCE_THRESHOLD=0.6
+# PIPELINE_CLASSIFIER_DEEP_MIN_QUERY_LENGTH=1
+# PIPELINE_SELECTIVE_TOOL_PLANNER_ENABLED=false
+# PIPELINE_SCHEMA_SNAPSHOT_CACHE_ENABLED=false
