Add MySQL connector support and catalog eval coverage

--- a/.env.example
+++ b/.env.example
@@ -43,6 +43,8 @@ LLM_TIMEOUT=30
 # Target Database Configuration (queries)
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/datachat
 DATABASE_TYPE=postgresql
+# Supported runtime connectors: postgresql, clickhouse, mysql
+# Example MySQL URL: mysql://root:password@localhost:3306/datachat
 # System Database Configuration (registry/profiling/demo)
 SYSTEM_DATABASE_URL=postgresql://postgres:postgres@localhost:5432/datachat
 DATABASE_POOL_SIZE=5
