--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "langchain-openai>=1.1.7",
     "langgraph>=1.0.6",
     "networkx>=3.6.1",
+    "mysql-connector-python>=9.5.0",
     "openai>=2.15.0",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
