feat: add db edit flow and phase1 KPI gate checks

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -38,3 +38,7 @@ jobs:
       - name: Test with pytest
         run: |
           pytest
+
+      - name: Phase 1 KPI gate (CI)
+        run: |
+          python scripts/phase1_kpi_gate.py --mode ci
