--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -35,6 +35,10 @@ jobs:
         run: |
           ruff check .
 
+      - name: Lint DataPoint contracts
+        run: |
+          python scripts/lint_datapoints.py --path datapoints/examples --recursive
+
       - name: Test with pytest
         run: |
           pytest
