--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -45,4 +45,16 @@ jobs:
 
       - name: Phase 1 KPI gate (CI)
         run: |
-          python scripts/phase1_kpi_gate.py --mode ci
+          python scripts/phase1_kpi_gate.py \
+            --mode ci \
+            --report-json reports/phase1_ci_gate.json \
+            --report-md reports/phase1_ci_gate.md
+
+      - name: Upload Phase 1 KPI report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: phase1-kpi-ci-report
+          path: |
+            reports/phase1_ci_gate.json
+            reports/phase1_ci_gate.md
