Add routing policy controls, decision trace, and route eval gates

--- a/.env.example
+++ b/.env.example
@@ -80,6 +80,10 @@ LOG_DATE_FORMAT=%Y-%m-%d %H:%M:%S
 # PIPELINE_SYNTHESIZE_SIMPLE_SQL_ANSWERS=true
 # PIPELINE_CLASSIFIER_DEEP_LOW_CONFIDENCE_THRESHOLD=0.6
 # PIPELINE_CLASSIFIER_DEEP_MIN_QUERY_LENGTH=1
+# PIPELINE_INTENT_LLM_CONFIDENCE_THRESHOLD=0.45
+# PIPELINE_CONTEXT_ANSWER_CONFIDENCE_THRESHOLD=0.7
+# PIPELINE_SEMANTIC_SQL_CLARIFICATION_CONFIDENCE_THRESHOLD=0.55
+# PIPELINE_AMBIGUOUS_QUERY_MAX_TOKENS=3
 # PIPELINE_SELECTIVE_TOOL_PLANNER_ENABLED=false
 # PIPELINE_SCHEMA_SNAPSHOT_CACHE_ENABLED=true
 # PIPELINE_SCHEMA_SNAPSHOT_CACHE_TTL_SECONDS=21600
