Improve SQL routing with table resolver and visualization heuristics

--- a/.env.example
+++ b/.env.example
@@ -83,6 +83,9 @@ LOG_DATE_FORMAT=%Y-%m-%d %H:%M:%S
 # PIPELINE_INTENT_LLM_CONFIDENCE_THRESHOLD=0.45
 # PIPELINE_CONTEXT_ANSWER_CONFIDENCE_THRESHOLD=0.7
 # PIPELINE_SEMANTIC_SQL_CLARIFICATION_CONFIDENCE_THRESHOLD=0.55
+# PIPELINE_SQL_TABLE_RESOLVER_ENABLED=true
+# PIPELINE_SQL_TABLE_RESOLVER_CONFIDENCE_THRESHOLD=0.55
+# PIPELINE_SQL_TABLE_RESOLVER_MAX_TABLES=20
 # PIPELINE_AMBIGUOUS_QUERY_MAX_TOKENS=3
 # PIPELINE_SELECTIVE_TOOL_PLANNER_ENABLED=false
 # PIPELINE_SCHEMA_SNAPSHOT_CACHE_ENABLED=true
