Improve SQL reliability with operator templates and robust parse recovery

--- a/.env.example
+++ b/.env.example
@@ -87,3 +87,5 @@ LOG_DATE_FORMAT=%Y-%m-%d %H:%M:%S
 # PIPELINE_SELECTIVE_TOOL_PLANNER_ENABLED=false
 # PIPELINE_SCHEMA_SNAPSHOT_CACHE_ENABLED=true
 # PIPELINE_SCHEMA_SNAPSHOT_CACHE_TTL_SECONDS=21600
+# PIPELINE_SQL_OPERATOR_TEMPLATES_ENABLED=true
+# PIPELINE_SQL_OPERATOR_TEMPLATES_MAX=8
