Add query compiler runtime, compiler eval gates, and trace tooling

--- a/.env.example
+++ b/.env.example
@@ -89,3 +89,7 @@ LOG_DATE_FORMAT=%Y-%m-%d %H:%M:%S
 # PIPELINE_SCHEMA_SNAPSHOT_CACHE_TTL_SECONDS=21600
 # PIPELINE_SQL_OPERATOR_TEMPLATES_ENABLED=true
 # PIPELINE_SQL_OPERATOR_TEMPLATES_MAX=8
+# PIPELINE_QUERY_COMPILER_ENABLED=true
+# PIPELINE_QUERY_COMPILER_LLM_ENABLED=true
+# PIPELINE_QUERY_COMPILER_LLM_MAX_CANDIDATES=10
+# PIPELINE_QUERY_COMPILER_CONFIDENCE_THRESHOLD=0.72
