Add LLM-assisted visualization recommendation with guardrails

--- a/.env.example
+++ b/.env.example
@@ -93,3 +93,5 @@ LOG_DATE_FORMAT=%Y-%m-%d %H:%M:%S
 # PIPELINE_QUERY_COMPILER_LLM_ENABLED=true
 # PIPELINE_QUERY_COMPILER_LLM_MAX_CANDIDATES=10
 # PIPELINE_QUERY_COMPILER_CONFIDENCE_THRESHOLD=0.72
+# PIPELINE_VISUALIZATION_LLM_ENABLED=true
+# PIPELINE_VISUALIZATION_LLM_ROW_SAMPLE=8
